# src/main/resources/swagger.yaml
@@ -910,6 +910,58 @@ paths:
               meta:
                 type: object
                 description: 'Extra metadata, such as API version'
+  /node/peers:
+    post:
+      tags:
+        - peer 
+        - node
+      description: Retrieve information on the peers connected to the node.
+      consumes:
+        - application/json
+      produces:
+        - application/json
+      responses:
+        '200':
+          description: Success
+          schema:
+            type: object
+            properties:
+              data:
+                type: object
+                description: response data
+                properties:
+                  type:
+                    type: string
+                    description: "resource type identifier, 'peer'"
+                  attributes:
+                    $ref: '#/definitions/Peer'
+              meta:
+                type: object
+                description: 'Extra metadata, such as API version'
+        4xx:
+          description: Error with the request
+          schema:
+            type: object
+            properties:
+              errors:
+                type: array
+                items:
+                  $ref: '#/definitions/APIError'
+              meta:
+                type: object
+                description: 'Extra metadata, such as API version'
+        5xx:
+          description: Error processing the request
+          schema:
+            type: object
+            properties:
+              errors:
+                type: array
+                items:
+                  $ref: '#/definitions/APIError'
+              meta:
+                type: object
+                description: 'Extra metadata, such as API version'
   /node/start:
     post:
       tags:
@@ -1309,17 +1361,35 @@ definitions:
       latestBlock:
         type: integer
         description: A number indicating the most recent block that has been mined.
+  Peer:
+      properties:
+        status:
+          type: string
+          description: 'Status of the node, it has two values "running" or "stopped"'
+        id:
+          type: string
+          description: Unique Node ID
+        nodeName:
+          type: string
+          description: Friendly node name (includes client and version info)
+        nodeUrl:
+          type: string
+          description: enode URI (Includes host IP and port number)
+        nodeIP:
+          type: string
+          description: IP address of the node
   NodeInfo:
-    properties:
-      identity:
-        type: string
-        description: Friendly node name which gets included in the full node Name
-      mining:
-        type: boolean
-        description: Indicates whether the node is commiting transactions or not
-      networkid:
-        type: integer
-        description: Network identifier
-      verbosity:
-        type: integer
-        description: 'Logging verbosity: 0-6 (0=silent, 1=error, 2=warn, 3=info, 4=core, 5=debug, 6=debug detail)'
+      properties:
+          identity:
+            type: string
+            description: Friendly node name which gets included in the full node Name
+          mining:
+            type: boolean
+            description: Indicates whether the node is commiting transactions or not
+          networkid:
+            type: integer
+            description: Network identifier
+          verbosity:
+            type: integer
+            description: 'Logging verbosity: 0-6 (0=silent, 1=error, 2=warn, 3=info, 4=core, 5=debug, 6=debug detail)'
+            
